Styles added and allowed to change vote

--- a/src/componets/app.scss
+++ b/src/componets/app.scss
@@ -1,4 +1,9 @@
 body {
-    background-color: lavenderblush;
+    background-color: #7cd56c;
     text-align: center;
+
+    p {
+        font-size: 1.6em;
+    }
+    
 }
