--- a/src/componets/mainscreen/mainscreen.scss
+++ b/src/componets/mainscreen/mainscreen.scss
@@ -1,3 +1,8 @@
 .main-screen {
-    margin-top: 100px;
+    margin-top: 150px;
+
+    .helpTxt {
+        margin-top: 175px;
+        font-size: 1.6em;
+    }
 }
