--- a/src/componets/app.scss
+++ b/src/componets/app.scss
@@ -1,6 +1,7 @@
 body {
-    background-color: #7cd56c;
+    background-color: #d4dbd2;
     text-align: center;
+    font-family: 'Happy Monkey';
 
     p {
         font-size: 1.6em;
