Loads data on page load.

--- a/client/src/componets/app.scss
+++ b/client/src/componets/app.scss
@@ -7,4 +7,16 @@ body {
         font-size: 1.6em;
     }
     
+
+    .loading {
+        margin-top: 200px;
+        font-size: 2em;
+    }
+
+    p.error {
+        margin-top: 300px;
+        font-size: 2em;
+        color: red;
+    }
+
 }
