--- a/server/src/main/resources/static/index.css
+++ b/server/src/main/resources/static/index.css
@@ -2,7 +2,7 @@
 
 .app-info{text-align:left}.app-info .detail{color:#8d49f3;font-weight:bold}
 
-.main-screen .main-screen-wrapper{background-color:whitesmoke;display:inline-block;padding:20px 20px 55px 20px;border-radius:14px;border:1px solid black;margin:130px 20px 20px 20px}.main-screen .main-screen-wrapper .firstTimeTag{margin:20px;padding:20px;background-color:wheat;font-size:1.3em}.main-screen .main-screen-wrapper .hint{margin-top:30px;font-size:1em}
+.main-screen .main-screen-wrapper{background-color:whitesmoke;display:inline-block;padding:20px 20px 55px 20px;border-radius:14px;border:1px solid black;margin:120px 20px 20px 20px}.main-screen .main-screen-wrapper .firstTimeTag{margin:20px;padding:20px;background-color:wheat;font-size:1.3em}.main-screen .main-screen-wrapper .hint{margin-top:30px;font-size:1em}
 
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
@@ -14,6 +14,8 @@
 header{padding:40px 40px 40px 60px;background-color:#7cd56c;border-bottom:5px solid black;text-align:left}header .header-wrapper{position:absolute;font-size:2em;font-weight:bold;animation:.8s ease-out 0s 1 slideInFromLeft;background-color:whitesmoke;display:inline;padding:18px;padding-bottom:30px;border-radius:14px;border:3px solid black}header .header-wrapper::after{content:"";background-color:#8d49f3;width:50%;height:2px;position:absolute;bottom:25px;z-index:3;left:25%;transition:all .2s ease-Out;animation:1s ease-out 0s 1 slideInFromLeftSlower}header .header-wrapper:hover::after{content:"";background-color:#8d49f3;width:72%;height:3px;position:absolute;bottom:25px;z-index:3;left:14%;animation:1s ease-out 0s 1 slideInFromLeftSlower}@keyframes slideInFromLeft{0%{transform:translateX(-100%)}66%{transform:translateX(7%)}100%{transform:translateX(0)}}@keyframes slideInFromLeftSlower{0%{left:0%}100%{left:25%}}nav{margin-top:20px}
 
 .rules{margin-top:70px}.rules .rules-paper{max-width:850px;margin:auto;padding:35px}.rules .rules-paper .rules-heading{font-size:2.2em}.rules .rules-paper .rules-txt{text-align:left;font-size:1.2em}
+
+.leader-board-header{max-width:800px;margin:auto;margin-top:40px;background-color:#B1855E;padding:20px;border:2px solid gray;border-radius:200px 200px 0px 0px;position:relative}.leader-board-header .h2-wrapper{background-color:gray;padding:8px 6px 6px 6px;display:inline-block;border-radius:20px;border-top:3px solid black;box-shadow:5px 3px lightgray}.leader-board-header .h2-wrapper h2{background-color:whitesmoke;padding:10px 20px 10px 20px;display:inline-block;border-radius:20px;border-bottom:3px solid black}.leader-board-header .h2-wrapper::after{content:"";clip-path:polygon(24% 17%, 40% 0, 62% 0, 78% 17%, 98% 28%, 100% 50%, 84% 54%, 62% 57%, 40% 57%, 18% 54%, 0 50%, 2% 30%);position:absolute;background-color:gray;height:100px;width:33%;bottom:-75px;left:33%}.clipboard-divider{height:2px;background-color:gray;width:100%;margin-bottom:10px}.clipboard{background-color:#B1855E;max-width:800px;margin:auto;min-height:800px}.clipboard .clipboard-paper{margin-top:10px;background-color:white;margin:auto;width:80%;min-height:800px}.clipboard-footer{background-color:#B1855E;max-width:800px;margin:auto;height:100px;margin-bottom:200px;border-radius:0px 0px 30px 30px}
 
 body{background-color:#d4dbd2;text-align:center;font-family:'Happy Monkey'}body p{font-size:1.6em}body .loading{margin-top:200px;font-size:2em}body p.error{margin-top:300px;font-size:2em;color:red}
 
