CSS added and margin bottom that cause scroll bar on all pages. Would throw menu off when it appeared on leaderboard only. Div and Checkmark componet added when change it offers feedbacl

--- a/client/src/componets/rules/rules.scss
+++ b/client/src/componets/rules/rules.scss
@@ -1,20 +1,18 @@
 .rules {
-    margin-top: 70px;
+  margin: 70px 20px 800px 20px;
 
-    .rules-paper {
-        max-width: 850px;   
-        margin: auto;
-        padding: 35px;
+  .rules-paper {
+    max-width: 850px;
+    margin: auto;
+    padding: 35px;
 
-        .rules-heading {
-            font-size: 2.2em;
-        }
-
-        .rules-txt {
-            text-align: left;
-            font-size: 1.2em;
-        }
-
+    .rules-heading {
+      font-size: 2.2em;
     }
 
+    .rules-txt {
+      text-align: left;
+      font-size: 1.2em;
+    }
+  }
 }
