--- a/client/src/componets/mainscreen/mainscreen.scss
+++ b/client/src/componets/mainscreen/mainscreen.scss
@@ -5,13 +5,20 @@
     padding: 20px 20px 55px 20px;
     border-radius: 14px;
     border: 1px solid black;
-    margin: 120px 20px 20px 20px;
+    margin: 120px 20px 800px 20px;
+    position: relative;
 
     .firstTimeTag {
       margin: 20px;
       padding: 20px;
       background-color: wheat;
       font-size: 1.3em;
+    }
+
+    .statusUpdater-wrapper {
+      position: absolute;
+      top: 10px;
+      right: 10px;
     }
 
     .hint {
