--- a/client/src/componets/mainscreen/mainscreen.scss
+++ b/client/src/componets/mainscreen/mainscreen.scss
@@ -1,11 +1,14 @@
 .main-screen {
+
+  font-size: 1.4em;
+
   .main-screen-wrapper {
     background-color: whitesmoke;
     display: inline-block;
     padding: 20px 20px 55px 20px;
     border-radius: 14px;
     border: 1px solid black;
-    margin: 120px 20px 800px 20px;
+    margin: 120px 20px 400px 20px;
     position: relative;
 
     .firstTimeTag {
