--- a/client/src/componets/app.scss
+++ b/client/src/componets/app.scss
@@ -2,11 +2,7 @@ body {
     background-color: #d4dbd2;
     text-align: center;
     font-family: 'Happy Monkey';
-
-    p {
-        font-size: 1.6em;
-    }
-    
+    font-size: 1.6em;
 
     .loading {
         margin-top: 200px;
@@ -19,4 +15,8 @@ body {
         color: red;
     }
 
+
+    .MuiTab-root {
+        font-size: 1em;
+    }
 }
