--- a/client/src/componets/clipboard/pencil/pencil.scss
+++ b/client/src/componets/clipboard/pencil/pencil.scss
@@ -56,6 +56,7 @@
 
   .pencilTxt {
     //had to add myself lol
+    font-size: .6em;
     transform: rotate(-90deg);
     transform-origin: right, top;
     -ms-transform: rotate(-90deg);
