--- a/client/src/componets/header/header.scss
+++ b/client/src/componets/header/header.scss
@@ -1,7 +1,7 @@
 $annimation-length: .8s;
 
 header {
-    padding: 40px 40px 40px 60px;
+    padding: 40px 40px 40px 40px;
     background-color: #7cd56c;
     border-bottom: 5px solid black;
     text-align: left;
@@ -9,7 +9,7 @@ header {
    // background-image: url("https://st2.depositphotos.com/1502315/8993/i/950/depositphotos_89939644-stock-photo-dark-grey-texture-may-used.jpg");
 
     .header-wrapper {
-        position: absolute;
+        position: relative;
         font-weight: bold;
         animation: $annimation-length ease-out 0s 1 slideInFromLeft;
         background-color: whitesmoke;
@@ -44,6 +44,21 @@ header {
         animation: 1s ease-out 0s 1 slideInFromLeftSlower;
     }
 
+    nav {
+
+        font-size: 1.4em;
+
+        .MuiTab-wrapper {
+            font-weight: bold;
+            color: black;
+        }
+    
+        .MuiTabs-indicator {
+            background-color: #8d49f3;
+        }
+    }
+   
+
 }
 
 @keyframes slideInFromLeft {
@@ -66,8 +81,4 @@ header {
     100% {
         left: 25%;
     }
-}
-
-nav {
-    margin-top: 20px;
 }
