--- a/client/src/componets/leaderboard/leaderboard.scss
+++ b/client/src/componets/leaderboard/leaderboard.scss
@@ -1,17 +1,22 @@
-.scores {
-    position: relative;
-    margin-left: 50px;
-    font-size: 1em;
+.leaderboard {
 
-    p.score {
-        margin-bottom: 30px;
-    }
+    margin-top: 60px;
 
-    span.score {
-        position: absolute;
-        right: 0px;
-        background-color: white;
-        width: 100px;
-        padding-left: 5px;
+    .scores {
+        position: relative;
+        margin-left: 40px;
+        font-size: 1em;
+
+        p.score {
+            margin-bottom: 30px;
+        }
+
+        span.score {
+            position: absolute;
+            right: 0px;
+            background-color: white;
+            width: 95px;
+            padding-left: 5px;
+        }
     }
 }
