Terms of service added. Contest rules added. Fillers for leaderboard up to 10 spots added

--- a/client/src/componets/rules/rules.scss
+++ b/client/src/componets/rules/rules.scss
@@ -1,5 +1,5 @@
 .rules {
-  margin: 70px 20px 400px 20px;
+  margin: 70px 20px 200px 20px;
 
   .rules-paper {
     max-width: 850px;
@@ -15,4 +15,27 @@
       font-size: 1em;
     }
   }
+
+
+  .sloppy-rules {
+    padding: 15px;
+    font-size: .4em;
+    max-width: 850px;
+    margin: auto;
+    margin-top: 100px;
+    text-align: left;
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    .context-rules {
+      .rule-header {
+        font-size: 1.1em;
+        font-weight: bold;
+        text-decoration: underline;
+      }
+    }
+  }
+
 }
